Last week/month summaries

--- a/src/views/rootLanding.ejs
+++ b/src/views/rootLanding.ejs
@@ -3,6 +3,7 @@
 <p>Insert description of application here</p>
 
 <td><a href="/behavior/reporting/">Reporting page</a> </td>
+<td><a href="/behavior/summary/">Summary page</a> </td>
 
 <p>Average mood today: <%= today %></p>
 <p>Average mood yesterday: <%= yesterday %></p>
