Choose week to summarize

--- a/src/views/summaryPage.ejs
+++ b/src/views/summaryPage.ejs
@@ -1,4 +1,23 @@
-<h1>Weekly summary (last week)</h1>
+<h1>Summary selection</h1>
+
+<form method="POST" action='/behavior/summary'>
+    <table>
+        <tr>
+            <td>Week</td>
+            <td><input type="week" name="week" /></td>
+        </tr>
+        <tr>
+            <td>Month</td>
+            <td><input type="month" name="month" /></td>
+        </tr>
+        <tr>
+            <td>Retrieve summary</td>
+            <td><input type="submit" value="Submit" /></td>
+        </tr>
+    </table>
+</form>
+
+<h1>Weekly summary</h1>
 
 <table>
     <tr>
@@ -18,7 +37,7 @@
     </tr>
 </table>
 
-<h1>Monthly summary (last month)</h1>
+<h1>Monthly summary</h1>
 
 <table>
     <tr>
