--- a/src/views/eveningForm.ejs
+++ b/src/views/eveningForm.ejs
@@ -1,5 +1,5 @@
+<%- include('./partials/header.ejs') %>
 <h1>Evening reporting</h1>
-
 <form method="POST" action='/behavior/reporting/evening'>
 <table>
     <tr>
@@ -32,3 +32,4 @@
     </tr>
 </table>
 </form>
+<%- include('./partials/footer.ejs') %>
