--- a/src/views/morningForm.ejs
+++ b/src/views/morningForm.ejs
@@ -1,5 +1,5 @@
+<%- include('./partials/header.ejs') %>
 <h1>Morning reporting</h1>
-
 <form method="POST" action='/behavior/reporting/morning'>
 <table>
     <tr>
@@ -24,3 +24,4 @@
       </tr>
 </table>
 </form>
+<%- include('./partials/footer.ejs') %>
