--- a/src/views/reportLanding.ejs
+++ b/src/views/reportLanding.ejs
@@ -1,5 +1,5 @@
+<%- include('./partials/header.ejs') %>
 <h1>Behavior reporting</h1>
-
 <table>
     <tr>
       <td>Morning reporting today: <%= morning %></td>
@@ -10,5 +10,5 @@
       <td><a href="/behavior/reporting/evening">Evening reporting</a> </td>
     </tr>
 </table>
-
+<%- include('./partials/footer.ejs') %>
 
