--- a/src/views/rootLanding.ejs
+++ b/src/views/rootLanding.ejs
@@ -1,5 +1,5 @@
+<%- include('./partials/header.ejs') %>
 <h1>Behavior reporting application</h1>
-
 <p>Insert description of application here</p>
 
 <td><a href="/behavior/reporting/">Reporting page</a> </td>
@@ -14,3 +14,4 @@
 <% if(today < yesterday) { %> 
     <p>Things are looking gloomy today. :(</p>
 <% } %>
+<%- include('./partials/footer.ejs') %>
