--- a/src/views/summaryPage.ejs
+++ b/src/views/summaryPage.ejs
@@ -1,5 +1,5 @@
+<%- include('./partials/header.ejs') %>
 <h1>Summary selection</h1>
-
 <form method="POST" action='/behavior/summary'>
     <table>
         <tr>
@@ -64,3 +64,4 @@
 <% } else { %> 
     <p> No data available</p>
 <% } %> 
+<%- include('./partials/footer.ejs') %>
