--- a/src/views/rootLanding.ejs
+++ b/src/views/rootLanding.ejs
@@ -4,6 +4,8 @@
 
 <td><a href="/behavior/reporting/">Reporting page</a> </td>
 <td><a href="/behavior/summary/">Summary page</a> </td>
+<td><a href="/auth/registration">Registration page</a> </td>
+<td><a href="/auth/login">Login page</a> </td>
 
 <p>Average mood today: <%= today %></p>
 <p>Average mood yesterday: <%= yesterday %></p>
