--- a/src/views/summaryPage.ejs
+++ b/src/views/summaryPage.ejs
@@ -19,7 +19,7 @@
 
 <h1>Weekly summary</h1>
 
-<% if(weekly.sleep_duration > 0 && weekly.sleep_quality > 0 && weekly.generic_mood > 0 && weekly.sports_duration > 0 && weekly.studying_duration > 0) { %> 
+<% if(weekly.sleep_duration > 0 || weekly.sleep_quality > 0 || weekly.generic_mood > 0 || weekly.sports_duration > 0 || weekly.studying_duration > 0) { %> 
     <table>
         <tr>
         <td>Average sleep duration: <%= weekly.sleep_duration %> hours/day</td>
@@ -43,7 +43,7 @@
 
 <h1>Monthly summary</h1>
 
-<% if(monthly.sleep_duration > 0 && monthly.sleep_quality > 0 && monthly.generic_mood > 0 && monthly.sports_duration > 0 && monthly.studying_duration > 0) { %> 
+<% if(monthly.sleep_duration > 0 || monthly.sleep_quality > 0 || monthly.generic_mood > 0 || monthly.sports_duration > 0 || monthly.studying_duration > 0) { %> 
     <table>
         <tr>
         <td>Average sleep duration: <%= monthly.sleep_duration %> hours/day</td>
