--- a/src/views/loginForm.ejs
+++ b/src/views/loginForm.ejs
@@ -1,5 +1,6 @@
 <%- include('./partials/header.ejs') %>
 <h1>Login</h1>
+<p><a href="/auth/registration">Registration page</a></p>
 <form method="POST" action='/auth/login'>
 <table>
     <tr>
