--- a/src/views/loginForm.ejs
+++ b/src/views/loginForm.ejs
@@ -17,4 +17,5 @@
     </tr>
 </table>
 </form>
+<% if(invalid) { %> <p>Invalid email or password.<% } %></p>
 <%- include('./partials/footer.ejs') %>
