Logged in partial

--- a/src/views/eveningForm.ejs
+++ b/src/views/eveningForm.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header.ejs') %>
+<%- include('./partials/loggedIn.ejs') %>
 <h1>Evening reporting</h1>
 <form method="POST" action='/behavior/reporting/evening'>
 <table>
