--- a/src/views/logoutPage.ejs
+++ b/src/views/logoutPage.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header.ejs') %>
+<%- include('./partials/loggedIn.ejs') %>
 <form method="POST" action='/auth/logout'>
     <table>
         <tr>
