--- a/src/views/morningForm.ejs
+++ b/src/views/morningForm.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header.ejs') %>
+<%- include('./partials/loggedIn.ejs') %>
 <h1>Morning reporting</h1>
 <form method="POST" action='/behavior/reporting/morning'>
 <table>
