--- a/src/views/rootLanding.ejs
+++ b/src/views/rootLanding.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header.ejs') %>
+<%- include('./partials/loggedIn.ejs') %>
 <h1>Self-monitoring application</h1>
 <p>Insert description of application here</p>
 
