--- a/src/views/summaryPage.ejs
+++ b/src/views/summaryPage.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header.ejs') %>
+<%- include('./partials/loggedIn.ejs') %>
 <h1>Summary selection</h1>
 <form method="POST" action='/behavior/summary'>
     <table>
