--- a/src/views/rootLanding.ejs
+++ b/src/views/rootLanding.ejs
@@ -1,7 +1,8 @@
 <%- include('./partials/header.ejs') %>
 <%- include('./partials/loggedIn.ejs') %>
 <h1>Self-monitoring application</h1>
-<p>Insert description of application here</p>
+<p>This is a web application for self-monitoring. The application provides users an opportunity 
+    to report behavior daily and look at summaries of their previous reports. </p>
 
 <% if(loggedIn)  { %> 
 <td><a href="/behavior/reporting/">Reporting page</a> </td>
