--- a/src/views/registrationForm.ejs
+++ b/src/views/registrationForm.ejs
@@ -4,7 +4,7 @@
 <table>
     <tr>
       <td>Email</td>
-      <td><input type="email" name="email" /></td>
+      <td><input type="email" name="email" <% if(email.length > 0) { %> value=<%= email %> <% } %>/></td>
     </tr>
     <tr>
       <td>Password</td>
@@ -20,4 +20,5 @@
     </tr>
 </table>
 </form>
+<%- include('./partials/errors.ejs') %>
 <%- include('./partials/footer.ejs') %>
