--- a/src/views/eveningForm.ejs
+++ b/src/views/eveningForm.ejs
@@ -5,7 +5,7 @@
 <table>
     <tr>
       <td>Date</td>
-      <td><input type="date" name="date" /></td>
+      <td><input type="date" name="date" value=<%= date %>></td>
     </tr>
     <tr>
       <td>Sports duration (0-24)</td>
