--- a/src/views/morningForm.ejs
+++ b/src/views/morningForm.ejs
@@ -5,19 +5,19 @@
 <table>
     <tr>
       <td>Date</td>
-      <td><input type="date" name="date" value=<%= date %>></td>
+    <td><input type="date" name="date" <% if(!passed) { %> value=<%= formData.date %><%}else {%>value=<%= date %> <%} %>></td>
     </tr>
     <tr>
       <td>Sleep duration (0-24)</td>
-      <td><input type="number" name="sleep_duration" min="0" max="24" step="0.1" /></td>
+    <td><input type="number" name="sleep_duration" min="0" max="24" step="0.1" <% if(!passed && formData.sleep_duration !== 0) { %> value=<%= formData.sleep_duration %> <% } %>/></td>
     </tr>
     <tr>
       <td>Sleep quality (1-5)</td>
-      <td><input type="number" name="sleep_quality" min="1" max="5" /></td>
+      <td><input type="number" name="sleep_quality" min="1" max="5" <% if(!passed && formData.sleep_quality !== 0) { %> value=<%= formData.sleep_quality %> <% } %>/></td>
     </tr>
     <tr>
       <td>Generic mood (1-5)</td>
-      <td><input type="number" name="generic_mood" min="1" max="5" /></td>
+      <td><input type="number" name="generic_mood" min="1" max="5" <% if(!passed && formData.generic_mood !== 0) { %> value=<%= formData.generic_mood %> <% } %>/></td>
     </tr>
     <tr>
         <td>Submit report</td>
@@ -25,4 +25,5 @@
       </tr>
 </table>
 </form>
+<%- include('./partials/errors.ejs') %>
 <%- include('./partials/footer.ejs') %>
