--- a/src/views/registrationSuccessfulPage.ejs
+++ b/src/views/registrationSuccessfulPage.ejs
@@ -1,3 +1,4 @@
 <%- include('./partials/header.ejs') %>
+<td><a href="/">Front page</a></td>
 <p>Registration successful</p>
 <%- include('./partials/footer.ejs') %>
