--- a/src/views/loginForm.ejs
+++ b/src/views/loginForm.ejs
@@ -1,6 +1,7 @@
 <%- include('./partials/header.ejs') %>
 <h1>Login</h1>
 <p><a href="/auth/registration">Registration page</a></p>
+<td><a href="/">Front page</a></td>
 <form method="POST" action='/auth/login'>
 <table>
     <tr>
