--- a/src/views/registrationForm.ejs
+++ b/src/views/registrationForm.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header.ejs') %>
+<td><a href="/">Front page</a></td>
 <h1>Registration</h1>
 <form method="POST" action='/auth/registration'>
 <table>
