--- a/src/views/reportLanding.ejs
+++ b/src/views/reportLanding.ejs
@@ -1,5 +1,6 @@
 <%- include('./partials/header.ejs') %>
 <%- include('./partials/loggedIn.ejs') %>
+<td><a href="/">Front page</a></td>
 <h1>Behavior reporting</h1>
 <table>
     <tr>
