--- a/src/views/summaryPage.ejs
+++ b/src/views/summaryPage.ejs
@@ -1,5 +1,6 @@
 <%- include('./partials/header.ejs') %>
 <%- include('./partials/loggedIn.ejs') %>
+<td><a href="/">Front page</a></td>
 <h1>Summary selection</h1>
 <form method="POST" action='/behavior/summary'>
     <table>
